WEBUMENIA-548 reinstate reading-progress bar with fixed whitespace

--- a/user/themes/longread/scss/custom.scss
+++ b/user/themes/longread/scss/custom.scss
@@ -886,6 +886,7 @@ form#email-capture {
   }
 
   .post-content {
+    margin-top: calc(95vh - 60px); // matching bottom: 5vh; of .article_image
     position: relative;
     width: inherit;
     padding-top: 0px;
